# my_gkrellm

./: CMakeLists.txt  Makefile  Qt  README.md  ncurses_mode
back/: CPU.cpp  CPU.hpp  Memory.cpp  Memory.hpp  Network.cpp  Network.hpp  SysInfo.cpp  SysInfo.hpp
bonus/: build-dockerfile.sh  run-tests.sh
front/: IMonitorDisplay.hpp  IMonitorModule.hpp  MonitorDisplay.cpp  MonitorDisplay.hpp  MonitorModule.cpp  MonitorModule.hpp
front/Qt/: Application.cpp  Application.hpp  Makefile  Qt.pro  main.cpp  moc_Cpu.cpp  moc_Date.cpp  moc_Net.cpp  moc_Ram.cpp  module.hpp
front/Qt/Modules/CPU/: Cpu.cpp  Cpu.hpp
front/Qt/Modules/Date/: Date.cpp  Date.hpp
front/Qt/Modules/Name/: Name.cpp  Name.hpp
front/Qt/Modules/Network/: Net.cpp  Net.hpp
front/Qt/Modules/OS/: OS.cpp  OS.hpp
front/Qt/Modules/Ram/: Ram.cpp  Ram.hpp
front/Qt/Modules/Time/: Time.cpp  Time.hpp
front/cli/: Makefile  main.cpp
front/ncurses/: Makefile  NCursesDisplay.cpp  NCursesDisplay.hpp
front/ncurses/Modules/: main.cpp
front/ncurses/Modules/cpu/: Cpu.cpp  Cpu.hpp
front/ncurses/Modules/date/: Date.cpp  Date.hpp
front/ncurses/Modules/name/: Name.cpp  Name.hpp
front/ncurses/Modules/network/: Network.cpp  Network.hpp
front/ncurses/Modules/os/: OS.cpp  OS.hpp
front/ncurses/Modules/ram/: Ram.cpp  Ram.hpp
front/ncurses/Modules/time/: Time.cpp  Time.hpp
